完成所有界面布局

--- a/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxml
+++ b/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxml
@@ -3,4 +3,14 @@
 	<view slot="content"></view>
 	<view slot="backText">面试现场</view>
 </cu-custom>
-<text>面试现场</text>
+<view class="wrap">
+	<view class="item" bindtap="toView">
+		<text class="title">2019年百度校招面试</text>
+		<text class="cuIcon-playfill text-yellow"></text>
+	</view>
+	<!-- <view class="item">
+		<text class="title">2019年百度校招面试</text>
+		<text class="cuIcon-playfill text-yellow"></text>
+	</view> -->
+</view>
+
