--- a/miniprogram/pages/center/viewReplay/viewReplay.wxss
+++ b/miniprogram/pages/center/viewReplay/viewReplay.wxss
@@ -1,1 +1,79 @@
 
+page {
+  background: white;
+}
+.wrap {
+  margin: 40rpx auto;
+  width: 700rpx;
+}
+.item {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 168rpx;
+  line-height: 40rpx;
+  border-radius: 16rpx;
+  text-align: center;
+  box-shadow: 0rpx 2rpx 8rpx 0rpx rgba(250, 191, 1, 0.47);
+  border: 2rpx solid rgba(255, 255, 255, 0);
+  margin-bottom: 40rpx;
+}
+.avatar {
+  width: 146rpx;
+  height: 146rpx;
+  background-color: rgba(250, 191, 1, 1);
+  border-radius: 100%;
+  margin: 10rpx;
+}
+image {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+.content {
+  width: 500rpx;
+  padding: 26rpx;
+}
+.content .user {
+  margin-bottom: 35rpx;
+  width: 100%;
+  text-align: left;
+}
+.content .time {
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+}
+.user .user-name {
+  float: left;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 44%;
+  margin-right: 11px;
+}
+.user .replay {
+  width: 226rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+}
+.dot {
+  line-height: 177rpx;
+  font-size: 68rpx;
+}
+.info {
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+  line-height: 168rpx;
+  text-indent: 30rpx;
+}
