--- a/miniprogram/pages/center/index/index.wxss
+++ b/miniprogram/pages/center/index/index.wxss
@@ -39,13 +39,13 @@ page{
 .txt1{
   position: absolute;
   left: 258rpx;
-  top: 246rpx;
-  width: 86px;
+  top: 201rpx;
   height: 40rpx;
-  color: rgba(163, 163, 163, 1);
-  font-size: 28rpx;
+  color: rgba(0, 0, 0, 1);
+  font-size: 36rpx;
   text-align: left;
-  font-family: PingFangSC-regular;
+  line-height: 69rpx;
+  font-family: SourceHanSansSC-regular;
 }
 .txt2{
   position: absolute;
@@ -143,7 +143,7 @@ page{
 .line2{
   position: absolute;
   left: 24rpx;
-  top: 976rpx;
+  top: 969rpx;
   width: 698rpx;
   border: 2rpx solid rgba(250, 191, 1, 0.47);
 }
@@ -222,7 +222,7 @@ page{
   position: absolute;
   left: 136rpx;
   /* top: 1180rpx; */
-  bottom: 0;
+  bottom: 30rpx;
 
   width: 112rpx;
   height: 40rpx;
@@ -235,7 +235,7 @@ page{
   position: absolute;
   left: 248rpx;
   /* top: 1180rpx; */
-  bottom: 0;
+  bottom: 30rpx;
 
   width: 168rpx;
   height: 40rpx;
@@ -247,7 +247,7 @@ page{
 .txt13{
   position: absolute;
   left: 410rpx;
-  bottom: 0;
+  bottom: 30rpx;
   width: 28rpx;
   height: 40rpx;
   color: rgba(16, 16, 16, 1);
@@ -259,7 +259,7 @@ page{
   position: absolute;
   left: 436rpx;
   /* top: 1180rpx; */
-  bottom: 0;
+  bottom: 30rpx;
 
   width: 168rpx;
   height: 40rpx;
@@ -267,4 +267,12 @@ page{
   font-size: 28rpx;
   text-align: left;
   font-family: PingFangSC-regular;
+}
+.to-center {
+  position: absolute;
+  left: 659rpx;
+  top: 224rpx;
+  width: 70rpx;
+  height: 70rpx;
+  font-size: 65rpx;
 }
