--- a/miniprogram/pages/center/myBanks/myBanks.wxss
+++ b/miniprogram/pages/center/myBanks/myBanks.wxss
@@ -1,1 +1,177 @@
+/* miniprogram/pages/questionBank/index/index.wxss */
+page {
+  background: white;
+}
+.written, .interview{
+  display: inline-block;
+  height: 154rpx;
+  width: 374rpx;
+  line-height: 154rpx;
+  border-radius: 8rpx;
+  text-align: center;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+  background: #fff;
+}
+
+.written text, .interview text {
+  width: 64rpx;
+  height: 46rpx;
+  font-size: 36rpx;
+  color: #000000;
+  font-family: SourceHanSansSC-regular;
+}
+.wrap .active text {
+  color: rgba(250, 191, 1, 1);
+}
+image {
+  width: 100%;
+  height: 100%;
+}
+.title {
+  position: relative;
+  width: 100%;
+  height: 132rpx;
+  line-height: 132rpx;
+  text-align: center;
+  background: white;
+}
+.title text {
+  color: rgba(16, 16, 16, 1);
+  font-size: 48rpx;
+  font-family: PingFangSC-regular;
+}
+.linel {
+  position: absolute;
+  left: 152rpx;
+  top: 64rpx;
+  width: 100rpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.liner {
+  position: absolute;
+  left: 500rpx;
+  top: 64rpx;
+  width: 100rpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.bank-wrap {
+  width: 100%;
+  line-height: 40rpx;
+  border-radius: 0rpx;
+  text-align: center;
+  background-color: white;
+}
+.bank {
+  position: relative;
+  left: 36rpx;
+  margin: 30rpx 0;
+  z-index: 2;
+  width: 680rpx;
+  height: 200rpx;
+  line-height: 40rpx;
+  border-radius: 20rpx;
+  text-align: center;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.bank-title {
+  position: absolute;
+  left: 40rpx;
+  width: 240rpx;
+  height: 84rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 30rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
+}
+.exam-icon {
+  position: absolute;
+  left: 510rpx;
+  top: 30rpx;
+  width: 72rpx;
+  height: 88rpx;
+}
+.exam {
+  position: absolute;
+  left: 590rpx;
+  top: 5rpx;
+  width: 56rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.start-exam {
+  position: absolute;
+  left: 40rpx;
+  top: 110rpx;
+  width: 160rpx;
+  height: 60rpx;
+  border-radius: 8rpx;
+  line-height: 60rpx;
+  background-color: rgba(239, 184, 6, 1);
+  color: rgba(250, 247, 247, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.limit-time {
+  position: absolute;
+  left: 502rpx;
+  top: 88rpx;
+  width: 146rpx;
+  height: 40rpx;
+  line-height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
+}
+.collection {
+  position: absolute;
+  width: 146rpx;
+  height: 40rpx;
+  line-height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 60rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
+  left: 472rpx;
+  top: 125rpx;
+}
+.view-result {
+    left: 208rpx;
+    top: 129rpx;
+    width: 113rpx;
+    height: 40rpx;
+    color: rgba(139, 137, 129, 1);
+    font-size: 28rpx;
+    text-align: left;
+    font-family: PingFangSC-regular;
+    position: absolute;
+    border-bottom: 1rpx solid;
+}
+.no-bank {
+  background: white;
+  height: 300rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
+  line-height: 300rpx;
+}
+
+.loading-img {
+  position: absolute;
+  height: 600rpx;
+  width: 100%;
+  background: white;
+  z-index: 100;
+}
+
+
 
