--- a/miniprogram/pages/center/myCenter/myCenter.wxss
+++ b/miniprogram/pages/center/myCenter/myCenter.wxss
@@ -97,17 +97,41 @@ page{
     text-align: left;
     font-family: SourceHanSansSC-regular;
   }
-  /* .blankBox1{
-    position: absolute;
-    left: 26rpx;
-    top: 550rpx;
-    width: 698rpx;
-    height: 200rpx;
-    line-height: 40rpx;
-    border-radius: 16rpx;
-    text-align: center;
-    background-color: white;
-    box-shadow: 0rpx 2rpx 8rpx 0rpx rgba(250, 191, 1, 0.47);
-    border: 1rpx solid rgba(255, 255, 255, 0);
-  } */
+.wrap {
+  display: flex;
+  flex-direction: column;
+  width: 700rpx;
+  /* height: 710rpx; */
+  line-height: 40rpx;
+  border-radius: 16rpx;
+  box-shadow: 0rpx 2rpx 8rpx 0rpx rgba(250, 191, 1, 0.47);
+  border: 2rpx solid rgba(255, 255, 255, 0);
+  margin: 190rpx auto 0;
+}
+.change-avatar, .usr-name, .industry {
+  border-bottom: 2rpx solid rgba(250, 191, 1, 0.47);
+  height: 180rpx;
+  font-size: 36rpx;
+  line-height: 171rpx;
+  padding: 10rpx 40rpx 10rpx;
+
+}
+image {
+  width: 146rpx;
+  height: 146rpx;
+  border-radius: 100% 100%;
+  background-color: rgba(127, 159, 206, 1);
+  border: 2rpx solid rgba(187, 187, 187, 1);
+}
+.usr-name text:nth-child(1), .industry text:nth-child(1) {
+  color: rgba(16, 16, 16, 1);
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+}
+.usr-name text:nth-child(2), .industry text:nth-child(2) {
+  color: rgba(154, 152, 152, 1);
+  text-align: right;
+  font-family: SourceHanSansSC-regular;
+  float: right;
+}
 
