--- a/miniprogram/pages/center/viewVideo/viewVideo.wxss
+++ b/miniprogram/pages/center/viewVideo/viewVideo.wxss
@@ -6,20 +6,16 @@ page {
 }
 .item {
   width: 680rpx;
-  height: 144rpx;
-  border-radius: 20rpx;
-  border: 2rpx solid rgba(187, 187, 187, 1);
-  padding:  10rpx 30rpx 10rpx;
   margin: 50rpx auto;
 }
 .item .title {
+  height: 48rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
+  font-size: 32rpx;
   text-align: left;
-  font-family: PingFangSC-regular;
-  line-height: 114rpx;
+  font-family: SourceHanSansSC-regular;
 }
-.item .cuIcon-playfill {
+/* .item .cuIcon-playfill {
   float: right;
   border: 4rpx solid #FABF01;
   border-radius: 100% 100%;
@@ -28,4 +24,12 @@ page {
   height: 56rpx;
   line-height: 56rpx;
   padding: 0 0 0 20rpx;
+} */
+.video-wrap {
+  width: 680rpx;
+  height: 170rpx;
+  line-height: 40rpx;
+  border-radius: 20rpx;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+  margin-top: 20rpx;
 }
