--- a/miniprogram/pages/home/wrongAll/wrongAll.wxml
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxml
@@ -5,9 +5,11 @@
 		<view slot="backText">完整试卷</view>
 	</cu-custom>
 	<wxs module="filter">
-		var isChecked = function(key, data) {
+		var isChecked = function(key, data, correct_data) {
 			if (data) {
 				return data.indexOf(key) != -1 ? true : false;
+			} else if (correct_data) {
+				return correct_data.indexOf(key) != -1 ? true : false;
 			} else {
 				return false;
 			}
@@ -62,7 +64,7 @@
 					</view>
 					<radio-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
 						<label wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<radio disabled checked="{{key === examBank.chooseValue[questionIndex]}}" class="{{examBank.bank.bank[questionIndex].mistaked&&key === examBank.chooseValue[questionIndex]?'red':'yellow'}} radio" wx:if="{{value}}" value="{{key}}">
+							<radio disabled checked="{{key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0]}}" class="{{examBank.bank.bank[questionIndex].mistaked&&(key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0])?'red radio':'yellow radio'}} no-radio" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
@@ -81,7 +83,7 @@
 					</view>
 					<checkbox-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
 						<label class="my-choosebox" wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex])}}">
+							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}} no-checkbox" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex],examBank.bank.bank[questionIndex].correct_answer)}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
@@ -99,7 +101,7 @@
 					</view>
 					<checkbox-group bindchange="checkboxChange" data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" class="checkbox-group">
 						<label class="my-choosebox" wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex])}}">
+							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex],examBank.bank.bank[questionIndex].correct_answer)}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
@@ -118,7 +120,7 @@
 					</view>
 					<radio-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
 						<label wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<radio disabled checked="{{key === examBank.chooseValue[questionIndex]}}" class="radio {{examBank.bank.bank[questionIndex].mistaked&&key === examBank.chooseValue[questionIndex]?'red':'yellow'}}" wx:if="{{value}}" value="{{key}}">
+							<radio disabled checked="{{key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0]}}" class="{{examBank.bank.bank[questionIndex].mistaked&&(key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0])?'red radio':'yellow radio'}} no-radio" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
@@ -136,7 +138,7 @@
 						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【填空】</text>
 					</view>
 
-					<view bindtap="handleTap" data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}">
+					<view class="yourblank" bindtap="handleTap" data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}">
 						你的答案: <text class="{{examBank.bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{examBank.chooseValue[questionIndex]}}</text>
 					</view>
 					<view class="correct-analyse">
@@ -157,13 +159,13 @@
 							</view>
 						</block>
 					</view>
-					<view style="margin-top: 30rpx">
-						你的答案:<text data-type="{{examBank.bank.bank[questionIndex].type}}" class="{{examBank.bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
+					<view class="yourblank" style="margin-top: 25rpx">
+						<text>你的答案:</text> <text style="display:inline-block" data-type="{{examBank.bank.bank[questionIndex].type}}" class="{{examBank.bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
 						{{examBank.chooseValue[questionIndex]}}
 						</text>
 					</view>
-					<view class="correct-analyse">
-						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
+					<view class="correct-analyse" >
+						<view>正确答案：<text  class="text-yellow">{{correct_answer}}</text></view> <br />
 						<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
